tests/fixtures/syntax/valid/string_literal_escaped_newline.repor
case "escaped newline unescapes to actual newline" {
  $ printf 'a\nb'
  assert {
    stdout contains "a\nb"
  }
}
