tests/fixtures/syntax/invalid/string_literal_undefined_escape.repor
case "undefined escape sequence" {
  $ true
  assert {
    stdout contains "a\xb"
  }
}
